# emoji-list

./: .gitignore  README.md  pyproject.toml
example/: test.typ
src/: api.py  data.py  file_handler.py  main.py
typst/: lib.typ
typst/example/: test.typ
